fix: infinite scroll on mobile fixed

--- a/src/features/repository/RepositoryDetails.scss
+++ b/src/features/repository/RepositoryDetails.scss
@@ -210,6 +210,7 @@
 
   &__stat-label {
     color: $color-text-muted;
+    margin-left: 0.25rem;
   }
 
   &__info {
